# Raskladochka

./: .editorconfig  .env.dist  .gitignore  README.md  bot.py  config_reader.py  gpt.py  gpt_gigachat.py  pyproject.toml  random_choice.py  requirements.txt  talking_head.py  tarot-images.json  tts.py
google/api/: annotations_pb2.py  http_pb2.py
google/rpc/: status_pb2.py
handlers/: common.py  ordering_food.py
yandex/cloud/: validation_pb2.py
yandex/cloud/ai/tts/v3/: tts_pb2.py  tts_service_pb2.py  tts_service_pb2_grpc.py
yandex/cloud/api/: operation_pb2.py
yandex/cloud/operation/: operation_pb2.py
